<resources>
    <string name="app_name">Coffee Log</string>

    <!-- Labels and hints for edit texts in editor -->
    <string name="method_edit_label">Method</string>
    <string name="method_edit_hint">Method used</string>
    <string name="coffee_used_edit_label">Coffee</string>
    <string name="coffee_used_edit_hint">Amount used</string>
    <string name="unit_coffee_used">g</string>
    <string name="water_used_edit_label">Yield</string>
    <string name="water_used_edit_hint">Coffee made</string>
    <string name="time_edit_label">Brew Time</string>
    <string name="time_mins_edit_hint">Minutes</string>
    <string name="mins">Minutes</string>
    <string name="time_sec_edit_hint">Seconds</string>
    <string name="seconds">Seconds</string>
    <string name="extraction_edit_label">Extraction</string>
    <string name="date_edit_label">Date Brewed</string>
    <string name="ratio_view_label">Ratio</string>
    <string name="ratio_button">Calculate</string>
    <string name="pick_date_button">Pick date</string>
    <string name="comment_edit_label">Comments</string>
    <string name="comment_edit_hint">Your comments here</string>

    <!-- Menu bar strings -->
    <string name="delete_entry_button">Delete entry</string>
    <string name="save_entry">Save</string>

    <!-- Method spinner options -->
    <string-array name="method_options">
        <item>French Press</item>
        <item>Aeropress</item>
        <item>Pour over</item>
        <item>Moka pot</item>
    </string-array>

    <!-- Extraction spinner options -->
    <string-array name="extraction_options">
        <item>Underextracted</item>
        <item>Balanced</item>
        <item>Overextracted</item>
    </string-array>

    <!-- Message if edit fields empty -->
    <string name="date_not_picked">Must pick a date.</string>

    <!-- Message to display if insertion successful or not -->
    <string name="insertion_successful">Saved entry</string>
    <string name="insertion_failed">Save failed</string>

    <!-- Message to display if deletion successful or not -->
    <string name="editor_delete_successful">Entry deleted</string>
    <string name="editor_delete_failed">Deletion falied</string>

    <!-- Message to display if update successful or not -->
    <string name="update_successful">Entry updated</string>
    <string name="update_failed">Entry not updated</string>

    <!-- Titles for add new entry and edit entry -->
    <string name="title_add_entry">Add Entry</string>
    <string name="title_edit_entry">Edit Entry</string>

    <!-- AlertDialog messages -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_confirm">Delete</string>
    <string name="discard">Discard</string>
    <string name="cancel_delete">Cancel</string>
    <string name="discard_changes">Discard your changes?</string>
    <string name="keep_editing">Keep editing</string>

    <!-- Empty text -->
    <string name="empty_view">Click the plus button to make your  first entry!</string>

    <!-- Blank field error message -->
    <string name="blank_field_error_message">Field cannot be blank</string>
    <string name="ratio_text">Ratio - 1:</string>
    <string name="item_clicked_id_extra_tag">itemClickedId</string>
</resources>
