<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.keelan542.coffeelog.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/method_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/method_edit_label"
                style="@style/CategoryStyle"
                android:paddingRight="10dp"
                android:text="@string/method_edit_label" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/method_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </Spinner>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/coffee_used_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coffee_used_edit_label"
                style="@style/CategoryStyle"
                android:text="@string/coffee_used_edit_label" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/coffee_used_edit_text"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/coffee_used_edit_hint"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/label_coffee_used_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_coffee_used" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/water_used_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/water_used_edit_label"
                style="@style/CategoryStyle"
                android:text="@string/water_used_edit_label" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/water_used_edit_text"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/water_used_edit_hint"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/label_water_used_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_coffee_used" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/ratio_view_label"
                style="@style/CategoryStyle"
                android:text="@string/ratio_view_label"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/ratio_button"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_edit_label"
                style="@style/CategoryStyle"
                android:text="@string/time_edit_label" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/time_mins_edit_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/time_mins_edit_hint"
                        android:inputType="number"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mins" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/time_sec_edit_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/time_sec_edit_hint"
                        android:inputType="number"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seconds" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/extraction_edit_label"
                style="@style/CategoryStyle"
                android:text="@string/extraction_edit_label"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/extraction_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </Spinner>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/date_edit_label"
                style="@style/CategoryStyle"
                android:text="@string/date_edit_label"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <DatePicker
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                </DatePicker>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

